changes made to everything

--- a/style.css
+++ b/style.css
@@ -20,11 +20,25 @@ div {
     text-decoration: none;
     color: black;
     margin: 15px;
+
+    transition: .2s;
+}
+
+.element:hover {
+    font-size: 17px;
 }
 
 .pp {
     line-height: 30px;
     font-size: 20px;
+    width: 90%;
+    text-align: center;
+    margin: auto;
+}
+
+.pp2 {
+    line-height: 30px;
+    font-size: 15px;
 }
 
 .fakeheader {
@@ -45,3 +59,67 @@ div {
     text-decoration: none;
     color: black;
 }
+
+.link2 {
+    color: black;
+    text-decoration: none;
+    transition: .3s;
+}
+
+.link2:hover {
+    color:blue;
+}
+
+.pp2 a:hover {
+    color: #da99f2;
+    /* color: #2c4c7d; */
+}
+
+.center {
+    margin-left: auto;
+    margin-right: auto;
+}
+
+th {
+    padding: 5px;
+    border-radius: 3px;
+    border-style: solid;
+}
+
+td {
+    padding: 5px;
+}
+
+.done {
+    color: #1bc904;
+}
+
+.progress {
+    color: #c9c304;
+}
+
+.not {
+    color: #ff0019;
+}
+
+.bottom {
+    position: fixed;
+    bottom: 0;
+    margin-bottom: 30px;
+    text-align: center;
+}
+
+.link3 {
+    background-image: linear-gradient(#e9acff, #e9acff);
+    background-repeat: no-repeat;
+    background-size: 100% 0;
+    color: black;
+    
+    background-position: bottom;
+    transition: .5s;
+}
+
+.link3:hover {
+    background-size: 100% 100%;
+}
+
